--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to GEO PROJECT Multiport Websocket Autoscript!</title>
+<title>Welcome to JsPhantom Multiport Websocket Autoscript!</title>
 <style>
     body {
         width: 35em;
@@ -11,14 +11,14 @@
 </style>
 </head>
 <body>
-<h1>Welcome to GEO PROJECT Multiport Websocket Autoscript!</h1>
+<h1>Welcome to JsPhantom Multiport Websocket Autoscript!</h1>
 <p>Thanks For Using This Autoscript Premium Version</p>
 
 <p>For Installation Or More Autoscript Please Visit
 <a href="https://github.com/vinstechmy">Click Me!</a><br/>
 Contact Me At Telegram :
-<a href="https://t.me/sampiiiiu">Click Me!</a></p>
+<a href="https://t.me/JsPhantom">Click Me!</a></p>
 
-<p><em>Thank you for using GEO PROJECT Multiport Websocket Autoscript</em></p>
+<p><em>Thank you for using JsPhantom Multiport Websocket Autoscript</em></p>
 </body>
 </html>
