--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p>Thanks For Using This Autoscript Premium Version</p>
 
 <p>For Installation Or More Autoscript Please Visit
-<a href="https://github.com/vinstechmy">Click Me!</a><br/>
+<a href="https://github.com/">Click Me!</a><br/>
 Contact Me At Telegram :
 <a href="https://t.me/JsPhantom">Click Me!</a></p>
 
